<resources>
    <string name="app_name">My Music</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Drive Songs</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="signin">SignIn</string>
    <string name="no_songs_found">No songs found</string>
    <string name="account_details">Account Details</string>
    <string name="logout">Logout</string>
    <string name="user_name">Default User</string>
    <string name="user_email">user@example.com</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="refresh_drive_songs">Refresh Drive Songs</string>
</resources>