<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/songs"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gdrive"
            android:icon="@drawable/drive"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/signIn"
            android:title="@string/signin"
            android:icon="@drawable/user"/>
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>

</menu>
