<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/side_nav_bar"
    android:paddingBottom="10dp"
    android:paddingStart="10dp"
    android:paddingEnd="1dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:gravity="bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp"
        android:layout_marginTop="25dp"
        android:gravity="top">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/music_icon" />

        <TextView
            android:layout_width="185dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:textStyle="italic"
            android:text="@string/user_name"/>

    </LinearLayout>

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="italic"
        android:text="@string/user_email"/>


</LinearLayout>